# VoiceType

./: .gitignore  README.md  assets-manifest.json
.agents/: AGENTS.md
.github/workflows/: release.yml
installer-app/src/: index.html  main.js
installer-app/src-tauri/: Cargo.toml  tauri.conf.json
installer-app/src-tauri/src/: main.rs
installer/src/: index.html  main.js
installer/src-tauri/: build.rs  tauri.conf.json
installer/src-tauri/src/: main.rs
src/: i18n.js  index.html  main.js  updater.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  ring_buffer.rs  vad.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/downloader/: mod.rs  model_registry.rs  python_installer.rs
src-tauri/src/hotword/: detector.rs  mod.rs
src-tauri/src/input/: clipboard.rs  focus_detector.rs  mod.rs  text_injector.rs
src-tauri/src/platform/: windows.rs
src-tauri/src/recognition/: engine_manager.rs  mod.rs
src-tauri/src/recognition/offline/: faster_whisper.rs  mod.rs  sherpa_onnx.rs  vosk_engine.rs  whisper_engine.rs
src-tauri/src/recognition/online/: assemblyai.rs  azure_speech.rs  deepgram.rs  google_stt.rs  mod.rs  openai_whisper.rs
src-tauri/src/tray/: mod.rs
src/styles/: app.css  reset.css  variables.css
