[package]
name = "voicetype"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
cpal = "0.15"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
bytemuck = "1"
ndarray = "0.17.2"
rubato = "0.14.1"
async-trait = "0.1"
vosk = "0.3"
whisper-rs = "0.16.0"
arboard = "3"
reqwest = { version = "0.12", features = ["stream", "json", "multipart"] }
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
tempfile = "3"
zip = "0.6"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tungstenite = "0.23"
url = "2"
base64 = { version = "0.22", features = ["std"] }
strsim = "0.11"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"

[features]
default = ["updater"]
updater = ["dep:tauri-plugin-updater"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Ole",
    "Win32_System_Registry",
] }

