[package]
name = "voicetype-installer"
version = "0.1.1"
description = "VoiceType Custom Installer"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
tempfile = "3"

